[package]
name = "governance-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tonapi-rs = { git = "https://github.com/supadupadao/tonapi-rs" }

actix-web = { version = "4.9.0" }
async-graphql = { version = "7.0.11" }
async-graphql-actix-web = { version = "7.0.11" }
clap = { version = "4.5.20", features = ["derive", "env"] }
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
lazy_static = { version = "1.5.0" }